--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .logo {
     display: flex;
-    align-items: center;
+    align-items: x 45px;
 }
 
 .logo img {
@@ -12,7 +12,9 @@
 }
 
 h1 {
-    margin-left: 20px; /* Espacio a la derecha del logo */
+    display: center;
+    margin-top: 200px;
+    margin-left: 500px; /* Espacio a la derecha del logo */
 }
 
 * {
