--- a/Estilo.css
+++ b/Estilo.css
@@ -129,6 +129,13 @@ nav a:hover {
 @media screen and (max-width: 768px) {
     .productos {
         grid-template-columns: repeat(1, 1fr);
+        justify-content: center;
+        align-self: center;
+        text-align: center;
+    }
+    .producto{
+        width: 100%;
+        margin: 0;
     }
 }
 
