--- a/main.css
+++ b/main.css
@@ -17,7 +17,6 @@ ul {
 a {
     text-decoration: none;
 }
-
 header{
     display: flex;
     min-height: 160px;
@@ -43,54 +42,146 @@ header{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* Sombra */
     margin-right: 10px;
 }
+ /* Estilos para la barra de búsqueda y el botón */
+ .search-bar {
 
-.boton-categoria {
-    position: relative;
-    display: inline-block;
-}
-.submenu {
-    display: none;
+    display: flex;
+    align-items: center;
+    margin-top: 123px;
+    margin-left: 130px;
     position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: #fff; /* Color de fondo del menú desplegable */
-    border: 1px solid #ccc; /* Borde del menú desplegable */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra del menú desplegable */
-    z-index: 1; /* Asegura que el menú desplegable esté por encima de otros elementos */
-}
-.boton-categoria:hover .submenu {
-    display: block;
-}
-.boton-menu {
-    display: flex;
-    text-decoration: none;
-    gap: 1rem;
-    padding: 10px 20px;
-    background-color: #333; /* Color de fondo del botón */
-    color: #fff; /* Color del texto del botón */
-    border-radius: 10px;
-    transition: background-color 0.3s; /* Transición suave para el color de fondo */
-    justify-content: space-between;
-}
-.nav{
-    display: flex;
-    justify-content: space-between;
-}
-.menu{
-    display: flex;
-    justify-content: space-around;
-    gap: 1rem;
-}
-.titulo-principal{
-    color: black;
-    margin-bottom: 2rem;
 }
 
+.search-input {
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-right: 10px;
+    background-color: #333;
+    color: white;
+}
+
+.search-button {
+    background-color: #ff4500;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+        /* Estilos para los resultados */
+#results {
+    margin-top: 20px;
+}
+
+.boton-menu:hover {
+    background-color: #555; /* Color de fondo al pasar el ratón sobre el botón */
+}
+
+#results img {
+    max-width: 120px; /* Establece el tamaño máximo de las imágenes en 120px */
+}
+
+/*Menu Hamburguesa*/
+
+.hamburguesa-icono {
+    display: block;
+    width: 30px;
+    height: 20px;
+    cursor: pointer;
+    position: absolute;
+    z-index: 2;
+    right: 50px;
+}
+
+.barra {
+    width: 100%;
+    height: 3px;
+    background-color: #128c7e; /* Cambiamos el color a #128c7e */
+    margin: 6px 0;
+    transition: 0.4s;
+}
+.menu-hamburguesa {
+    position: fixed;
+    top: 0;
+    left: -250px;
+    width: 250px;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 1;
+    transition: left 0.4s;
+}
+.menu-principal {
+    list-style: none; /* Quitamos las viñetas de la lista */
+    padding: 0;
+}
+.boton-menu, .boton-menu.active, a.boton-menu {
+    display: block;
+    padding: 10px 20px;
+    color: #e6e6e6; /* Cambiamos el color de texto a #128c7e */
+    text-decoration: none;
+    transition: 0.3s;
+    width: 100%;
+    text-align: left;
+    background-color: transparent; /* Fondo transparente por defecto */
+    border: none; /* Quita los bordes */
+    margin: 0; 
+}
+.boton-menu:hover, .boton-menu.active:hover, a.boton-menu:hover {
+    background-color: #797979; /* Cambiamos el color de fondo al hacer hover */
+    color: #fff; /* Cambiamos el color de texto al hacer hover */
+}
+.cerrar-menu {
+    color: #128c7e; /* Cambiamos el color de texto a #128c7e */
+    cursor: pointer;
+}
+.cerrar-menu:hover {
+    color: #fff; /* Cambiamos el color de texto al hacer hover */
+}
+
+.menu-main {
+    margin: 30px; /* Agrega un margen de 20 píxeles alrededor del div que contiene el menú */
+}
+/* Estilo para el botón del carrito */
+/* Estilos para el botón del carrito flotante */
+/* Estilos para el contenedor del carrito */
+.carrito-contenedor {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 1000;
+}
+
+/* Estilos para el botón del carrito dentro del contenedor */
+/* Estilos para el botón del carrito del contenedor */
+.carrito-contenedor .boton-menu {
+    background-color: #25d366;
+    color: #fff;
+    padding: 20px 15px;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    display: flex; /* Para alinear los elementos horizontalmente */
+    align-items: center; /* Para alinear verticalmente en el centro */
+}
+
+/* Estilos para el número de artículos en el carrito */
+.carrito-contenedor .numerito {
+    background-color: #f00;
+    color: #fff;
+    border-radius: 50%;
+    padding: 5px 10px;
+}
+/* Estilo para la lista (li) del carrito */
+.li-carrito {
+    list-style-type: none; /* Quita los puntos de la lista */
+    margin: 0;
+    padding: 0;
+    color: #25d366;
+}
 main {
-    background-color: rgb(255, 255, 255);
+    background-color: #c0c0c0;
     margin: 1rem;
-    margin-left: 0;
-    border-radius: 2rem;
     padding: 2rem;
 }
 .titulo-principal{
@@ -253,56 +344,6 @@ main {
     background-color: #128c7e; /* Cambia el color al pasar el mouse */
 }
 
-
- /* Estilos para la barra de búsqueda y el botón */
- .search-bar {
-
-    display: flex;
-    align-items: center;
-    margin-top: 123px;
-    margin-left: 130px;
-    position: absolute;
-}
-
-.search-input {
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-right: 10px;
-    background-color: #333;
-    color: white;
-}
-
-.search-button {
-    background-color: #ff4500;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-        /* Estilos para los resultados */
-#results {
-    margin-top: 20px;
-}
-
-.boton-menu:hover {
-    background-color: #555; /* Color de fondo al pasar el ratón sobre el botón */
-}
-
-#results img {
-    max-width: 120px; /* Establece el tamaño máximo de las imágenes en 120px */
-}
-
-/* Estilos adicionales para los botones (boton-volver y boton-carrito) */
-.boton-volver {
-    background-color: #007bff; /* Color de fondo azul */
-}
-
-.boton-carrito {
-    background-color: #28a745; /* Color de fondo verde */
-}
-
 /***media Queries***/
 
 @media screen and (max-width: 600px) {
@@ -319,11 +360,21 @@ main {
         padding: 1rem;
         border-radius: 1rem;
         margin-bottom: 1rem;
+        text-align: center;
     }
     
     /* Establece un ancho del 100% para los elementos internos */
     .carrito-producto div {
         width: 100%;
+    }
+    .carrito-producto-titulo h3 {
+        font-size: 16px; /* Tamaño de fuente para el título */
+    }
+    
+    .carrito-producto-cantidad p,
+    .carrito-producto-precio p,
+    .carrito-producto-subtotal p {
+        font-weight: bold; /* Texto en negrita para cantidad, precio y subtotal */
     }
     .carrito-acciones {
         display: flex;
@@ -354,6 +405,49 @@ main {
         background-color: #128c7e; /* Cambia el color al pasar el mouse */
     }
     .disabled{
-        display: none;
+        display: none;    
 }
+    .carrito-contenedor {
+        z-index: 100;
+}
+}
+
+.todos-los-menus {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.boton-carrito-nuevo{
+    display: none;
+}
+.menu-texto{
+    margin-right: 10px;
+    display: inline-block;
+}
+/* Estilo para el botón "Carrito" */
+.menu{
+    display: flex;
+    justify-content: space-around;
+}
+.boton-menu.boton-carrito {
+    background-color: rgb(37, 243, 37); /* Cambia el color a verde claro */
+    color: white; /* Cambia el color del texto a blanco */
+    padding: 10px 20px; /* Ajusta el espaciado interno para que se vea mejor */
+}
+
+/* Estilo para el botón "Seguir Comprando" */
+.boton-menu.boton-volver {
+    background-color: #1877f2; /* Cambia el color a azul como el de Facebook */
+    color: white; /* Cambia el color del texto a blanco */
+    padding: 10px 20px; /* Ajusta el espaciado interno para que se vea mejor */
+}
+
+/* Estilos generales para los botones */
+.boton-menu {
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 5px;
+    margin-right: 10px;
 }
