--- a/main.css
+++ b/main.css
@@ -453,3 +453,44 @@ main {
     border-radius: 5px;
     margin-right: 10px;
 }
+
+.blog-entries {
+    margin: 20px;
+}
+.blog-entry {
+    background-color: #f9f9f9;
+    padding: 20px;
+    margin: 20px 0;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    text-align: center; /* Añade esta propiedad para centrar el texto */
+    max-width: 800px; /* Limita el ancho de la entrada */
+    margin-left: auto; /* Centra horizontalmente */
+    margin-right: auto; /* Centra horizontalmente */
+}
+.blog-entry h3 {
+    font-size: 24px;
+    margin: 10px 0;
+}
+
+.blog-entry img {
+    max-width: 100%;
+    height: auto;
+    margin: 10px 0;
+}
+.blog-entry p {
+    font-size: 16px;
+    line-height: 1.5;
+    margin: 10px 0;
+}
+
+.blog-entry a.styled-link{
+    display: inline-block;
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 4px;
+    margin-top: 10px;
+}
+
