--- a/main.css
+++ b/main.css
@@ -494,3 +494,41 @@ main {
     margin-top: 10px;
 }
 
+.whatsapp-icon {
+    width: 7%;
+    position: fixed;
+    bottom: 100px;
+    right: 30px;
+    background-color: #25D366; /* Color de WhatsApp */
+    color: #fff;
+    border: none;
+    border-radius: 40%;
+    padding: 15px;
+    font-size: 18px;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    z-index: 1000;
+}
+.instagram-icon {
+    width: 7%;
+    position: fixed;
+    bottom: 200px;
+    right: 30px;
+    background-color: #070707; /* Color de WhatsApp */
+    color: #fff;
+    border: none;
+    border-radius: 40%;
+    padding: 15px;
+    font-size: 18px;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    z-index: 1000;
+}
